--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/CampStove/parseit/issues"
   },
-  "homepage": "https://github.com/CampStove/parseit#readme"
+  "homepage": "https://github.com/CampStove/parseit#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "express": "^4.16.2"
+  }
 }
