--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "axios": "^0.18.0",
     "express": "^4.16.2",
     "hapi": "^17.2.1",
+    "node-fetch": "^2.0.0",
+    "request": "^2.83.0",
     "wreck": "^14.0.2"
   }
 }
